# Congo-Brain

./: .gitignore  AI_ENGINE.md  DATABASE.md  Dockerfile  ECONOMIC_ENGINE.md  LICENSE  PROJECT_PLAN.md  README.md  SYSTEM_ARCHITECTURE.md  pyproject.toml  render.yaml  requirements.txt  start.sh
.github/workflows/: ci.yml
congo_brain/: __init__.py  __main__.py
congo_brain/api/: server.py
congo_brain/api/v1/: auth.py  budget.py  citizen.py  investment.py  router.py  security.py  transparency.py
congo_brain/cli/: app.py  budget_cmds.py  citizen_cmds.py  db_cmds.py  investment_cmds.py  security_cmds.py  transparency_cmds.py  user_cmds.py
congo_brain/core/: config.py  database.py  security.py
congo_brain/data/: seed.py
congo_brain/models/: __init__.py  budget.py  citizen.py  investment.py  security_alert.py  transparency.py  user.py
congo_brain/schemas/: auth.py  budget.py  citizen.py  investment.py  security.py  transparency.py
congo_brain/services/: budget_service.py  citizen_service.py  investment_service.py  security_service.py  transparency_service.py
congo_brain/services/ai/: anomaly_detector.py  investment_optimizer.py  risk_analyzer.py
congo_brain/static/: index.html
ia_gov/: __init__.py  __main__.py
ia_gov/api/: routes.py  server.py
ia_gov/cli/: app.py
ia_gov/data/: __init__.py  government_data.py
ia_gov/services/: gov_service.py
ia_gov/static/: index.html
